@@ -58,7 +58,7 @@ jQuery(document).ready(function( $ ) {
   //clear custom fields when brand is added
   jQuery( document ).ajaxSuccess(function( event, xhr, settings ) {
       //Check ajax action of request that succeeded
-      if( ~settings.data.indexOf("action=add-tag") && ~settings.data.indexOf("taxonomy=pwb-brand") ) {
+      if( typeof settings != "undefined" && settings.data && ~settings.data.indexOf("action=add-tag") && ~settings.data.indexOf("taxonomy=pwb-brand") ) {
         $('#pwb_brand_image').val('');
         $('#pwb_brand_banner').val('');
         $('.pwb_brand_image_selected').remove();
@@ -146,6 +146,44 @@ jQuery(document).ready(function( $ ) {
     }
 
     $(this).val('-');//reset to default value
+
+  } );
+
+  var $systemStatusBtn = $('#wc_pwb_admin_tab_tools_system_status').siblings('p');
+  $systemStatusBtn.addClass('button wc_pwb_admin_tab_status_btn');
+  $('.wc_pwb_admin_tab_status_btn').on( 'click', function(e){
+    e.preventDefault();
+    if( !$('#wc_pwb_admin_status_result').length ){
+      $systemStatusTextarea = $('#wc_pwb_admin_tab_tools_system_status');
+      $('<pre id="wc_pwb_admin_status_result"></pre>').insertAfter($systemStatusTextarea);
+      jQuery( '#wc_pwb_admin_status_result' ).click( function(e) {
+        e.preventDefault();
+        var refNode = $( this )[0];
+        if ( $.browser.msie ) {
+            var range = document.body.createTextRange();
+            range.moveToElementText( refNode );
+            range.select();
+        } else if ( $.browser.mozilla || $.browser.opera ) {
+            var selection = window.getSelection();
+            var range = document.createRange();
+            range.selectNodeContents( refNode );
+            selection.removeAllRanges();
+            selection.addRange( range );
+        } else if ( $.browser.safari ) {
+            var selection = window.getSelection();
+            selection.setBaseAndExtent( refNode, 0, refNode, 1 );
+        }
+      } );
+    }
+    $('#wc_pwb_admin_status_result').html('<img src="'+ajax_object.site_url+'/wp-admin/images/spinner.gif'+'" alt="Loading" height="20" width="20">');
+    $('#wc_pwb_admin_status_result').show();
+    var data = {
+      'action': 'pwb_system_status'
+    };
+    jQuery.post(ajaxurl, data, function(response) {
+      $('#wc_pwb_admin_status_result').html(response);
+      $('#wc_pwb_admin_status_result').trigger('click');
+    });
 
   } );
 
